server auto-save

--- a/plugins/PermissionsEx/permissions.yml
+++ b/plugins/PermissionsEx/permissions.yml
@@ -663,3 +663,8 @@ users:
     - member
     options:
       name: InfaReQt
+  1caa3d79-fac1-40fe-a746-00ca3dd484b1:
+    group:
+    - owner
+    options:
+      name: HoiDoi
