--- a/plugins/PermissionsEx/permissions.yml
+++ b/plugins/PermissionsEx/permissions.yml
@@ -665,6 +665,6 @@ users:
       name: InfaReQt
   1caa3d79-fac1-40fe-a746-00ca3dd484b1:
     group:
-    - member
+    - owner
     options:
       name: HoiDoi
