server auto-save

--- a/plugins/GriefPreventionData/ClaimData/54.yml
+++ b/plugins/GriefPreventionData/ClaimData/54.yml
@@ -1,7 +1,8 @@
 Lesser Boundary Corner: Survival;21167;56;17811
 Greater Boundary Corner: Survival;21211;56;17818
 Owner: 1caa3d79-fac1-40fe-a746-00ca3dd484b1
-Builders: []
+Builders:
+- fe67c94b-d917-4ead-8ca0-23ad110442d4
 Containers: []
 Accessors: []
 Managers: []
