--- a/plugins/GriefPreventionData/ClaimData/52.yml
+++ b/plugins/GriefPreventionData/ClaimData/52.yml
@@ -2,6 +2,7 @@ Lesser Boundary Corner: Survival;21177;54;17819
 Greater Boundary Corner: Survival;21185;54;17827
 Owner: 1caa3d79-fac1-40fe-a746-00ca3dd484b1
 Builders:
+- e08f1017-dcc3-41c5-a3f1-0829257827cc
 - fe67c94b-d917-4ead-8ca0-23ad110442d4
 Containers: []
 Accessors: []
