server auto-save

--- a/plugins/GriefPreventionData/ClaimData/59.yml
+++ b/plugins/GriefPreventionData/ClaimData/59.yml
@@ -1,7 +1,8 @@
 Lesser Boundary Corner: Survival;21178;76;17834
 Greater Boundary Corner: Survival;21190;76;17845
 Owner: fe67c94b-d917-4ead-8ca0-23ad110442d4
-Builders: []
+Builders:
+- 1caa3d79-fac1-40fe-a746-00ca3dd484b1
 Containers: []
 Accessors: []
 Managers: []
