server auto-save

--- a/plugins/StaffPlus/data.yml
+++ b/plugins/StaffPlus/data.yml
@@ -583,3 +583,14 @@ fe67c94b-d917-4ead-8ca0-23ad110442d4:
   - NAME_CHANGE;true
   - MENTION;true
   - XRAY;true
+e08f1017-dcc3-41c5-a3f1-0829257827cc:
+  name: KoiDoi
+  password: ''
+  glass-color: 0
+  reports: []
+  warnings: []
+  notes: []
+  alert-options:
+  - NAME_CHANGE;true
+  - MENTION;true
+  - XRAY;true
