server auto-save

--- a/plugins/PermissionsEx/permissions.yml
+++ b/plugins/PermissionsEx/permissions.yml
@@ -668,3 +668,8 @@ users:
     - vip
     options:
       name: HoiDoi
+  fe67c94b-d917-4ead-8ca0-23ad110442d4:
+    group:
+    - vip
+    options:
+      name: DoiHoi
