server auto-save

--- a/plugins/PermissionsEx/permissions.yml
+++ b/plugins/PermissionsEx/permissions.yml
@@ -673,3 +673,8 @@ users:
     - vip
     options:
       name: DoiHoi
+  af107eba-f1bb-48de-8a3d-6cc39534eabe:
+    group:
+    - helper
+    options:
+      name: spacemangreg81
