--- a/plugins/PermissionsEx/permissions.yml
+++ b/plugins/PermissionsEx/permissions.yml
@@ -558,6 +558,7 @@ users:
         group:
         - member
     permissions:
+    - -modifyworld.*
     - -modifyworld.blocks.place
     - -modifyworld.blocks.*
   c541f001-3197-482c-9f14-878f3fdaa80e:
