server auto-save

--- a/plugins/AdvancedBan/data/storage.properties
+++ b/plugins/AdvancedBan/data/storage.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Thu Jul 19 10:53:18 BST 2018
+#Thu Jul 19 17:49:25 BST 2018
 version=2.4.0
-modified=no
+modified=yes
 tx_timestamp=0
