--- a/plugins/Citizens/saves.yml
+++ b/plugins/Citizens/saves.yml
@@ -44,7 +44,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: equipment,mounttrait,text,waypoints,inventory,anchors,owner,speech,location,type,gravity,spawned,lookclose
+    traitnames: owner,anchors,mounttrait,lookclose,location,text,speech,type,gravity,waypoints,equipment,inventory,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -89,7 +89,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,equipment,mounttrait,speech,text,inventory,anchors,location,type,spawned,gravity,lookclose
+    traitnames: owner,speech,anchors,type,mounttrait,gravity,lookclose,location,spawned,inventory,text,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -121,7 +121,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,equipment,mounttrait,inventory,location,type,spawned,gravity,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,inventory,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -153,7 +153,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: equipment,owner,mounttrait,inventory,location,type,spawned,gravity,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,spawned,equipment,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -185,7 +185,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: equipment,owner,mounttrait,inventory,location,type,gravity,spawned,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -217,7 +217,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,equipment,mounttrait,inventory,location,type,spawned,gravity,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -244,7 +244,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: equipment,owner,mounttrait,inventory,location,type,gravity,spawned,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,spawned,equipment,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -276,7 +276,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,equipment,mounttrait,inventory,location,type,spawned,gravity,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,spawned,inventory,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -313,7 +313,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,equipment,mounttrait,inventory,location,type,gravity,spawned,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,spawned,equipment,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -345,7 +345,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: equipment,owner,mounttrait,inventory,location,type,gravity,spawned,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,inventory,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -377,7 +377,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: equipment,owner,mounttrait,inventory,location,type,gravity,spawned,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -409,7 +409,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: equipment,owner,mounttrait,inventory,location,type,spawned,gravity,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -441,7 +441,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: equipment,owner,mounttrait,inventory,location,type,gravity,spawned,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,inventory,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -608,7 +608,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: equipment,owner,mounttrait,waypoints,sentinel,inventory,location,type,gravity,spawned,lookclose
+    traitnames: owner,type,sentinel,mounttrait,gravity,lookclose,location,waypoints,equipment,inventory,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -739,7 +739,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,equipment,mounttrait,sentinel,inventory,location,type,gravity,spawned,lookclose
+    traitnames: owner,type,sentinel,mounttrait,gravity,lookclose,location,inventory,equipment,spawned
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -870,7 +870,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: equipment,owner,mounttrait,sentinel,inventory,location,type,spawned,gravity,lookclose
+    traitnames: owner,type,sentinel,mounttrait,gravity,lookclose,location,inventory,spawned,equipment
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -903,7 +903,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: equipment,owner,mounttrait,inventory,location,type,spawned,gravity,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -935,7 +935,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: equipment,owner,mounttrait,inventory,location,type,gravity,spawned,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -964,7 +964,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: equipment,mounttrait,inventory,location,type,spawned,gravity,lookclose
+    traitnames: type,mounttrait,gravity,lookclose,location,spawned,inventory,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -993,7 +993,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: equipment,mounttrait,inventory,location,type,gravity,spawned,lookclose
+    traitnames: type,mounttrait,gravity,lookclose,location,spawned,inventory,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1022,7 +1022,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: equipment,mounttrait,inventory,location,type,spawned,gravity,lookclose
+    traitnames: type,mounttrait,gravity,lookclose,location,equipment,inventory,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1051,7 +1051,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: equipment,mounttrait,inventory,location,type,spawned,gravity,lookclose
+    traitnames: type,mounttrait,gravity,lookclose,location,spawned,equipment,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1080,7 +1080,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: equipment,mounttrait,inventory,location,type,gravity,spawned,lookclose
+    traitnames: type,mounttrait,gravity,lookclose,location,inventory,equipment,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1109,7 +1109,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: equipment,mounttrait,inventory,location,type,spawned,gravity,lookclose
+    traitnames: type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1138,7 +1138,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: equipment,mounttrait,inventory,location,type,gravity,spawned,lookclose
+    traitnames: type,mounttrait,gravity,lookclose,location,inventory,spawned,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1170,7 +1170,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,equipment,mounttrait,inventory,location,type,spawned,gravity,lookclose
+    traitnames: owner,type,mounttrait,gravity,lookclose,location,inventory,spawned,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1199,7 +1199,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: equipment,mounttrait,inventory,location,type,spawned,gravity,lookclose
+    traitnames: type,mounttrait,gravity,lookclose,location,spawned,inventory,equipment
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1228,7 +1228,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: equipment,mounttrait,inventory,location,type,gravity,spawned,lookclose
+    traitnames: type,mounttrait,gravity,lookclose,location,equipment,inventory,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1253,7 +1253,7 @@ npc:
       age:
         age: 0
         locked: true
-    traitnames: mounttrait,age,location,type,spawned,lookclose
+    traitnames: type,mounttrait,lookclose,location,age,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
