--- a/plugins/Wild/config.yml
+++ b/plugins/Wild/config.yml
@@ -27,6 +27,7 @@ No-Perm: '&4You do not have permission to make a wild sign'
 No-Break: '&4Hey! You can not break WildTp sign!'
 NoPerm: '&4Sorry but you don''t have permission to do /wild :( please ask an admin
   why'
+NoWorldPerm: '&4Sorry but you don''t have permission to do /wild is this world'
 Cooldown: 5
 Play: true
 Sound: Enderman Teleport
