--- a/plugins/Citizens/saves.yml
+++ b/plugins/Citizens/saves.yml
@@ -44,7 +44,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,anchors,mounttrait,lookclose,location,text,speech,type,gravity,waypoints,equipment,inventory,spawned
+    traitnames: owner,type,waypoints,inventory,speech,text,mounttrait,anchors,gravity,location,spawned,equipment,lookclose
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -83,13 +83,13 @@ npc:
         x: '144.5'
         y: '70.5'
         z: '544.5'
-        yaw: '-32.095245361328125'
+        yaw: '-43.70258712768555'
         pitch: '0.0'
       type: PLAYER
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,speech,anchors,type,mounttrait,gravity,lookclose,location,spawned,inventory,text,equipment
+    traitnames: owner,type,inventory,equipment,speech,text,mounttrait,anchors,gravity,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -110,7 +110,7 @@ npc:
         x: '128.5'
         y: '70.5'
         z: '560.5'
-        yaw: '-46.88547134399414'
+        yaw: '-128.2407989501953'
         pitch: '0.0'
       gravity:
         enabled: false
@@ -121,7 +121,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,inventory,spawned
+    traitnames: owner,type,equipment,inventory,mounttrait,gravity,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -153,7 +153,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,spawned,equipment,inventory
+    traitnames: owner,type,equipment,inventory,mounttrait,gravity,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -185,7 +185,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
+    traitnames: owner,type,equipment,inventory,mounttrait,gravity,lookclose,location,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -217,7 +217,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
+    traitnames: owner,type,equipment,inventory,mounttrait,gravity,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -244,7 +244,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,spawned,equipment,inventory
+    traitnames: owner,type,equipment,inventory,mounttrait,gravity,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -276,7 +276,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,spawned,inventory,equipment
+    traitnames: owner,type,inventory,equipment,mounttrait,gravity,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -313,7 +313,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,spawned,equipment,inventory
+    traitnames: owner,type,equipment,inventory,mounttrait,gravity,lookclose,location,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -345,7 +345,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,inventory,spawned
+    traitnames: owner,type,equipment,inventory,mounttrait,gravity,lookclose,location,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -377,7 +377,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
+    traitnames: owner,type,equipment,inventory,mounttrait,gravity,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -409,7 +409,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
+    traitnames: owner,type,equipment,inventory,mounttrait,gravity,lookclose,location,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -441,7 +441,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,inventory,spawned
+    traitnames: owner,type,equipment,inventory,mounttrait,gravity,lookclose,location,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -579,6 +579,7 @@ npc:
           '1': MONSTER
         ignores:
           '0': OWNER
+        reach: 3.0
       equipment:
         hand:
           type: DIAMOND_SWORD
@@ -608,7 +609,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,sentinel,mounttrait,gravity,lookclose,location,waypoints,equipment,inventory,spawned
+    traitnames: owner,type,waypoints,equipment,inventory,mounttrait,gravity,sentinel,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -707,6 +708,7 @@ npc:
           '1': OWNER
         ignores:
           '0': OWNER
+        reach: 3.0
       equipment:
         hand:
           type: DIAMOND_SWORD
@@ -739,7 +741,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,sentinel,mounttrait,gravity,lookclose,location,inventory,equipment,spawned
+    traitnames: owner,type,inventory,equipment,mounttrait,gravity,sentinel,lookclose,spawned,location
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -838,6 +840,7 @@ npc:
           '0': MONSTER
         ignores:
           '0': OWNER
+        reach: 3.0
       equipment:
         hand:
           type: DIAMOND_SWORD
@@ -870,7 +873,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,sentinel,mounttrait,gravity,lookclose,location,inventory,spawned,equipment
+    traitnames: owner,type,inventory,equipment,mounttrait,gravity,sentinel,lookclose,spawned,location
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -903,7 +906,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
+    traitnames: owner,type,equipment,inventory,mounttrait,gravity,lookclose,location,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -935,7 +938,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
+    traitnames: owner,type,equipment,inventory,mounttrait,gravity,lookclose,location,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -964,7 +967,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: type,mounttrait,gravity,lookclose,location,spawned,inventory,equipment
+    traitnames: type,inventory,equipment,mounttrait,gravity,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -993,7 +996,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: type,mounttrait,gravity,lookclose,location,spawned,inventory,equipment
+    traitnames: type,inventory,equipment,mounttrait,gravity,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1022,7 +1025,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: type,mounttrait,gravity,lookclose,location,equipment,inventory,spawned
+    traitnames: type,equipment,inventory,mounttrait,gravity,lookclose,location,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1051,7 +1054,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: type,mounttrait,gravity,lookclose,location,spawned,equipment,inventory
+    traitnames: type,equipment,inventory,mounttrait,gravity,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1080,7 +1083,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: type,mounttrait,gravity,lookclose,location,inventory,equipment,spawned
+    traitnames: type,inventory,equipment,mounttrait,gravity,lookclose,location,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1109,7 +1112,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: type,mounttrait,gravity,lookclose,location,equipment,spawned,inventory
+    traitnames: type,equipment,inventory,mounttrait,gravity,lookclose,location,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1138,7 +1141,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: type,mounttrait,gravity,lookclose,location,inventory,spawned,equipment
+    traitnames: type,inventory,equipment,mounttrait,gravity,lookclose,location,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1170,7 +1173,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: owner,type,mounttrait,gravity,lookclose,location,inventory,spawned,equipment
+    traitnames: owner,type,inventory,equipment,mounttrait,gravity,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1199,7 +1202,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: type,mounttrait,gravity,lookclose,location,spawned,inventory,equipment
+    traitnames: type,inventory,equipment,mounttrait,gravity,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1228,7 +1231,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: type,mounttrait,gravity,lookclose,location,equipment,inventory,spawned
+    traitnames: type,equipment,inventory,mounttrait,gravity,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1253,7 +1256,7 @@ npc:
       age:
         age: 0
         locked: true
-    traitnames: type,mounttrait,lookclose,location,age,spawned
+    traitnames: type,mounttrait,age,lookclose,spawned,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
