--- a/plugins/ServerListPlus/ServerListPlus.yml
+++ b/plugins/ServerListPlus/ServerListPlus.yml
@@ -36,8 +36,8 @@ Default:
   #42 wide
   Description:
   - |-
-    &7     &eTumbleCraft &rby &4TN &r// &a1.12.2,1.13
-    &7     &bAdded 1.13 Support
+    &7        &eTumbleCraft &rby &4TN &r// &a1.12.2-1.13
+    &7                  &bAdded 1.13 Support
   Players:
     Hover:
     - |-
