--- a/plugins/ProtocolLib/config.yml
+++ b/plugins/ProtocolLib/config.yml
@@ -13,8 +13,8 @@ global:
   background compiler: true
 
   # Disable version checking for the given Minecraft version. Backup your world first!
-  ignore version check: true
-
+  ignore version check:
+    
   # Override the starting injecting method
   injection method:
 
