server auto-save

--- a/plugins/AdvancedBan/data/storage.properties
+++ b/plugins/AdvancedBan/data/storage.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Thu Jul 19 19:38:23 BST 2018
+#Thu Jul 19 19:59:20 BST 2018
 version=2.4.0
-modified=yes
+modified=no
 tx_timestamp=0
